reduced code to one loop

--- a/GetFPV Scrape.ipynb
+++ b/GetFPV Scrape.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {
     "hidden": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {
     "hidden": true
    },
@@ -50,8 +50,8 @@
     "# open session\n",
     "rs = requests.session()\n",
     "\n",
-    "# search video receivers in stock\n",
-    "url = \"https://www.getfpv.com/fpv/video-receivers.html?in-stock=1\"\n",
+    "# search video receivers\n",
+    "url = \"https://www.getfpv.com/fpv/video-receivers.html\"\n",
     "result = rs.get(url)\n",
     "\n",
     "# check if we made it to site\n",
@@ -66,104 +66,166 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Scrape"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
-   "source": [
-    "## Products"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "video_receivers = soup.find_all('h2', {'class' : 'product-name'})\n",
+    "# items = soup.find_all('li', {'class' : 'item last'})\n",
+    "details = soup.find_all('div', {'class' : 'details-area'})\n",
     "\n",
     "df,i = pd.DataFrame(), 0\n",
-    "for vr in video_receivers:\n",
-    "    df.loc[i, 'product_name'] = vr.a['title']\n",
-    "    i += 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
-   "source": [
-    "## Prices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {
-    "hidden": true,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "i = 0\n",
-    "for p in soup.find_all('div', {'class' : 'price-box'}):\n",
+    "# for det,item in zip(details, items):\n",
+    "for det in details:\n",
+    "#     product_name\n",
+    "    df.loc[i, 'product_name'] = det.h2.a['title'].upper()\n",
+    "# #     image\n",
+    "#     df.loc[i, 'image'] = item.a.img['src']\n",
+    "#     price\n",
     "    special = 0\n",
-    "#     on sale?\n",
-    "    if p.find_all('p', {'class' : 'special-price'}):\n",
+    "    if det.find('p', {'class' : 'special-price'}):\n",
     "        special = 1\n",
-    "        sp = p.find_all('span', {'class' : 'price'})[-1]\n",
-    "        price = p.find_all('span', {'class' : 'price'})[-1].text.strip().strip('$').strip(',')\n",
-    "#     nope\n",
+    "        price = det.find('p', {'class' : 'special-price'}).find('span', {'class' : 'price'}).text.strip()\n",
     "    else:\n",
-    "        price = p.text.strip().replace('$', '').replace(',', '')\n",
+    "        price = det.find('span', {'class' : 'price'}).text\n",
+    "    price = float(price.replace('$', '').replace(',', ''))\n",
     "    df.loc[i, 'special'] = special\n",
-    "    df.loc[i, 'price'] = float(price)\n",
+    "    df.loc[i, 'price'] = price\n",
+    "    available = 'available'\n",
+    "    if det.find('div', {'class' : 'div_availability backordered'}):\n",
+    "        available = det.find('div', {'class' : 'div_availability backordered'}).text.lower()\n",
+    "    df.loc[i, 'availability'] = available\n",
     "    i += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_name</th>\n",
+       "      <th>special</th>\n",
+       "      <th>price</th>\n",
+       "      <th>availability</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>IFTRON CLEARVIEW GOGGLE RECEIVER MODULE</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>289.99</td>\n",
+       "      <td>pre-order</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LAFORGE DIVERSITY FAT SHARK MODULE V4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>39.99</td>\n",
+       "      <td>available</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>IMMERSIONRC RAPIDFIRE W/ ANALOG PLUS GOGGLE RE...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>available</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FURIOUS TRUE-D DIVERSITY RECEIVER MODULE 5.8GH...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>79.89</td>\n",
+       "      <td>available</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>FAT SHARK 5.8GHZ 5G8RX 32CH RACE BAND RECEIVER...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>30.99</td>\n",
+       "      <td>available</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        product_name  special   price  \\\n",
+       "0            IFTRON CLEARVIEW GOGGLE RECEIVER MODULE      0.0  289.99   \n",
+       "1              LAFORGE DIVERSITY FAT SHARK MODULE V4      0.0   39.99   \n",
+       "2  IMMERSIONRC RAPIDFIRE W/ ANALOG PLUS GOGGLE RE...      0.0    0.00   \n",
+       "3  FURIOUS TRUE-D DIVERSITY RECEIVER MODULE 5.8GH...      0.0   79.89   \n",
+       "4  FAT SHARK 5.8GHZ 5G8RX 32CH RACE BAND RECEIVER...      0.0   30.99   \n",
+       "\n",
+       "  availability  \n",
+       "0    pre-order  \n",
+       "1    available  \n",
+       "2    available  \n",
+       "3    available  \n",
+       "4    available  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df"
+    "df.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Reviews"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "heading_collapsed": true,
     "hidden": true
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## Status"
+    "# Data"
    ]
   }
  ],
